working with text files with python - part two

--- a/PythonBasics/Working With Text Files With Python - Part One.ipynb
+++ b/PythonBasics/Working With Text Files With Python - Part One.ipynb
@@ -95,7 +95,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can define a minimum amount of space between each value by adding {number} to the string interpolation.\n",
+    "You can define a minimum amount of space between each value by adding `{number}` to the string interpolation.\n",
     "For example `print(f'{author: {10}}')`, you can also add `>` to align strings with integers."
    ]
   },
