text feature extraction - part two

--- a/Text Classification/Text Feature Extraction.ipynb
+++ b/Text Classification/Text Feature Extraction.ipynb
@@ -242,6 +242,306 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfTransformer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tfidf_transformer = TfidfTransformer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_tfidf = tfidf_transformer.fit_transform(X_train_counts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3733, 7082)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train_tfidf.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The two steps above CountVectorizer & TfidfTransformer\n",
+    "# were combined into one feature TfidfVectorizer\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vectorizer = TfidfVectorizer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_tfidf = vectorizer.fit_transform(X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3733, 7082)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train_tfidf.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.svm import LinearSVC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf = LinearSVC()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearSVC(C=1.0, class_weight=None, dual=True, fit_intercept=True,\n",
+       "          intercept_scaling=1, loss='squared_hinge', max_iter=1000,\n",
+       "          multi_class='ovr', penalty='l2', random_state=None, tol=0.0001,\n",
+       "          verbose=0)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf.fit(X_train_tfidf, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We can combine all the steps above in one single pipeline step\n",
+    "# so it is easier to call predict without the need to vectorize and\n",
+    "# transform the test data set\n",
+    "from sklearn.pipeline import Pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text_clf = Pipeline([('tfidf', TfidfVectorizer()), ('clf', LinearSVC())])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(memory=None,\n",
+       "         steps=[('tfidf',\n",
+       "                 TfidfVectorizer(analyzer='word', binary=False,\n",
+       "                                 decode_error='strict',\n",
+       "                                 dtype=<class 'numpy.float64'>,\n",
+       "                                 encoding='utf-8', input='content',\n",
+       "                                 lowercase=True, max_df=1.0, max_features=None,\n",
+       "                                 min_df=1, ngram_range=(1, 1), norm='l2',\n",
+       "                                 preprocessor=None, smooth_idf=True,\n",
+       "                                 stop_words=None, strip_accents=None,\n",
+       "                                 sublinear_tf=False,\n",
+       "                                 token_pattern='(?u)\\\\b\\\\w\\\\w+\\\\b',\n",
+       "                                 tokenizer=None, use_idf=True,\n",
+       "                                 vocabulary=None)),\n",
+       "                ('clf',\n",
+       "                 LinearSVC(C=1.0, class_weight=None, dual=True,\n",
+       "                           fit_intercept=True, intercept_scaling=1,\n",
+       "                           loss='squared_hinge', max_iter=1000,\n",
+       "                           multi_class='ovr', penalty='l2', random_state=None,\n",
+       "                           tol=0.0001, verbose=0))],\n",
+       "         verbose=False)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text_clf.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = text_clf.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import confusion_matrix, classification_report"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1586    7]\n",
+      " [  12  234]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(confusion_matrix(y_test, predictions))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         ham       0.99      1.00      0.99      1593\n",
+      "        spam       0.97      0.95      0.96       246\n",
+      "\n",
+      "    accuracy                           0.99      1839\n",
+      "   macro avg       0.98      0.97      0.98      1839\n",
+      "weighted avg       0.99      0.99      0.99      1839\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_test, predictions))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['ham'], dtype=object)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Testing with random text\n",
+    "text_clf.predict(['Hi, how are you doing today?'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['spam'], dtype=object)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text_clf.predict(['Congratulations! You have ben selected as a winner. Text WON to 44255.'])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
