--- a/Deep Learning for NLP/Text Generation with LSTMs with Keras.ipynb
+++ b/Deep Learning for NLP/Text Generation with LSTMs with Keras.ipynb
@@ -362,6 +362,32 @@
    "source": [
     "dump(tokenizer, open('my_simpletokenizer', 'wb'))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.preprocessing.sequence import pad_sequences\n",
+    "\n",
+    "def generate_text(model, tokenizer, seq_len, seed_text, num_gen_words):\n",
+    "    \n",
+    "    output_text = []\n",
+    "    \n",
+    "    input_txt = seed_text\n",
+    "    \n",
+    "    for i in range(num_gen_words):\n",
+    "        enconded_text = tokenizer.texts_to_sequences([input_txt])[0]\n",
+    "        pad_encoded = pad_sequences([enconded_text], maxlen=seq_len, truncating='pre')\n",
+    "        pred_word_ind = model.predict_classes(pad_encoded, verbose=0)[0]\n",
+    "        pred_word = tokenizer.index_word[pred_word_ind]\n",
+    "        input_text += ' ' + pred_word\n",
+    "        \n",
+    "        output_text.append(pred_word)\n",
+    "    \n",
+    "    return ' '.join(output_text)"
+   ]
   }
  ],
  "metadata": {
