creating chat bots with python - part two

--- a/Deep Learning for NLP/Creating Chat Bots with Python.ipynb
+++ b/Deep Learning for NLP/Creating Chat Bots with Python.ipynb
@@ -368,6 +368,184 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.preprocessing.sequence import pad_sequences\n",
+    "from keras.preprocessing.text import Tokenizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer = Tokenizer(filters='')\n",
+    "tokenizer.fit_on_texts(vocab)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'football': 1,\n",
+       " 'daniel': 2,\n",
+       " 'mary': 3,\n",
+       " 'down': 4,\n",
+       " 'left': 5,\n",
+       " '.': 6,\n",
+       " 'milk': 7,\n",
+       " 'grabbed': 8,\n",
+       " 'travelled': 9,\n",
+       " 'dropped': 10,\n",
+       " 'bedroom': 11,\n",
+       " 'yes': 12,\n",
+       " 'is': 13,\n",
+       " 'garden': 14,\n",
+       " 'bathroom': 15,\n",
+       " '?': 16,\n",
+       " 'office': 17,\n",
+       " 'to': 18,\n",
+       " 'hallway': 19,\n",
+       " 'no': 20,\n",
+       " 'in': 21,\n",
+       " 'back': 22,\n",
+       " 'moved': 23,\n",
+       " 'journeyed': 24,\n",
+       " 'picked': 25,\n",
+       " 'put': 26,\n",
+       " 'there': 27,\n",
+       " 'up': 28,\n",
+       " 'the': 29,\n",
+       " 'john': 30,\n",
+       " 'went': 31,\n",
+       " 'apple': 32,\n",
+       " 'got': 33,\n",
+       " 'sandra': 34,\n",
+       " 'took': 35,\n",
+       " 'discarded': 36,\n",
+       " 'kitchen': 37}"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenizer.word_index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_story_text = []\n",
+    "train_question_text = []\n",
+    "train_answers = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for story, question, answer in train_data:\n",
+    "    train_story_text.append(story)\n",
+    "    train_question_text.append(question)\n",
+    "    train_answers.append(answer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_story_seq = tokenizer.texts_to_sequences(train_story_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10000"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(train_story_seq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def vectorize_stories(data, word_index=tokenizer.word_index, max_story_len=max_story_len, max_question_len=max_question_len):\n",
+    "    # Stories\n",
+    "    X = []\n",
+    "    # Questions\n",
+    "    Xq = []\n",
+    "    # Y Correct answer\n",
+    "    Y = []\n",
+    "    \n",
+    "    for story, question, answer in data:\n",
+    "        # for each story\n",
+    "        # [23, 14....]\n",
+    "        x = [word_index[word.lower()] for word in story]\n",
+    "        xq = [word_index[word.lower()] for word in question]\n",
+    "        \n",
+    "        y = np.zeros(len(word_index) + 1)\n",
+    "        \n",
+    "        y[word_index[answer]] = 1\n",
+    "        \n",
+    "        X.append(x)\n",
+    "        Xq.append(xq)\n",
+    "        Y.append(y)\n",
+    "        \n",
+    "    return (pad_sequences(X, maxlen=max_story_len), pad_sequences(Xq, maxlen=max_question_len), np.array(Y))\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inputs_train, queries_train, answers_train = vectorize_stories(train_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inputs_test, queries_test, answers_test = vectorize_stories(test_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
